--- a/index.html
+++ b/index.html
@@ -85,10 +85,8 @@
                                     <h6 class="wow" data-splitting>Creative Full-Stack Developer</h6>
                                 </div>
                                 <div class="header-cont-text">
-                                    <p class="wow" data-splitting>Hi, I’m Jesse and I enjoy creating things that live on the internet.  I am creative junior web & app developer proficient in backend technoligies like PHP and Laravel who dreams of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided to ...    <br>
-                                   
-                                        
-                                    Fast-forward to today, and I’ve had the privilege of working at various tech institutions where I learned how to work in a professional environment. My main focus these days is building accessible, inclusive products and digital experiences at <a href="#">Abia Tech Hub</a> for a variety of clients.</p>
+                                    <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel who dreams of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided to ...    <br>
+                                    My main focus these days is building accessible, inclusive products and digital experiences at <a href="https://abiatechhub.com/">Abia Tech Hub</a> for a variety of clients.</p>
                                 </div>
                                 <div class="btn-wrap text-center">
                                     <div class="btn-link"> <a href="#">Download CV <i class="ti-download"></i></a> <span class="btn-block color1 animation-bounce"></span> </div>
@@ -421,11 +419,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Get in touch</h5>
-                    <p>info@dbrown.com</p>
+                    <p><a href = mailto:jessennorom@gmail.com>jessennorom@gmail.com</a></p>
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>San Francisco — California</p>
+                    <p>Nsukka, Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
