--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <p class="wow fadeInUp" data-wow-delay=".2s">As an ambitious junior developer, I aim to be the best in any work environment by continuous learning and adding skills to my resume</p>
-                    <p class="wow fadeInUp" data-wow-delay=".4s">I am willing to learn on a job as I am a quick learner and it will not affect my productivity to the company</p>
+                    <p class="wow fadeInUp" data-wow-delay=".4s">I am willing to learn on a job as I am a quick learner and it will not affect my productivity.</p>
                     <div class="btn-wrap text-left mt-45 wow fadeInUp" data-wow-delay=".6s">
                         <div class="btn-link"><a href=mailto:jessennorom@gmail.com.com>jessennorom@gmail.com</a> <span class="btn-block color1 animation-bounce"></span> </div>
                     </div>
@@ -182,7 +182,7 @@
                     <div class="bar">
                         <div class="bar-fill bar-fill-socialmedia start"></div>
                     </div>
-                    <p class="bar-title">Back-end Design<span class="percent align-right">75%</span></p>
+                    <p class="bar-title">Back-end Development<span class="percent align-right">75%</span></p>
                     <div class="bar">
                         <div class="bar-fill bar-fill-webdesign start"></div>
                     </div>
