--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from duruthemes.com/demo/html/nils/nils-light/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Oct 2022 08:56:44 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nilsa Brown</title>
+    <title>Jesse</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&amp;display=swap">
     <link rel="stylesheet" href="css/plugins.css" />
@@ -55,7 +53,7 @@
                     <div class="logo-wrap">
                         <a href="index-2.html">
                             <div class="logo">
-                                <img src="images/logo-dark.png" alt="">
+                                <img src="images/logo-slider-black.png" alt="">
                             </div>
                         </a>
                     </div>
@@ -85,7 +83,7 @@
                                     <h6 class="wow" data-splitting>Creative Full-Stack Developer</h6>
                                 </div>
                                 <div class="header-cont-text">
-                                    <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel who dreams of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided to ...    <br>
+                                    <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided to ...    <br>
                                     My main focus these days is building accessible, inclusive products and digital experiences at <a href="https://abiatechhub.com/">Abia Tech Hub</a> for a variety of clients.</p>
                                 </div>
                                 <div class="btn-wrap text-center">
