--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="logo-wrap">
                         <a href="index-2.html">
                             <div class="logo">
-                                <img src="images/logo-slider-black.png" alt="">
+                                <img src="images/logo-slider-black.png" alt="" style="max-height:40px; width:70px">
                             </div>
                         </a>
                     </div>
