--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-md-12">
                     <div class="header-section-wrap">
                         <div class="header-view-on-mobile">
-                            <h1>Jesse Nnorom</h1>
+                            <h1>Jesse</h1>
                             <h6>Creative Full-Stack Developer</h6>
                         </div>
                         <div class="transform-banner position-relative">
