--- a/index.html
+++ b/index.html
@@ -389,22 +389,22 @@
                 <div class="col-md-7">
                     <div class="owl-carousel owl-theme">
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/1.png" alt=""></a>
+                            <img src="images/clients/html-5.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/2.png" alt=""></a>
+                            <img src="images/clients/css-3.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/3.png" alt=""></a>
+                            <img src="images/clients/bootstrap.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/4.png" alt=""></a>
+                            <img src="images/clients/js.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/5.png" alt=""></a>
+                            <img src="images/clients/react.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/6.png" alt=""></a>
+                            <img src="images/clients/php.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                     </div>
                 </div>
