--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <div class="col-md-6 mb-30">
                         <h4 class="wow" data-splitting>Need help with professional support? Let's work together!</h4>
                         <div class="btn-wrap mt-30 text-left wow fadeInUp" data-wow-delay=".6s">
-                            <div class="btn-link"> <a href="#" class="white">info@dbrown.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
+                            <div class="btn-link"><a href = mailto:jessennorom@gmail.com class="white">jessennorom@gmail.com</a><span class="btn-block color3 animation-bounce"></span> </div>
                         </div>
                     </div>
                     <!-- Testiominals -->
