--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
         <div class="nilsbrown-menu-inner" id="nilsbrown-navbar">
             <ul class="list-unstyled">
                 <li><a href="index-2.html">Home</a></li>
-                <li><a href="about.html">Resume</a></li>
+                <li><a href="links/about.html">Resume</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li class="active"><a href="blog.html">Blog</a></li>
