--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <nav class="nilsbrown-menu" id="nilsbrown-navbar-spy">
         <div class="nilsbrown-menu-inner" id="nilsbrown-navbar">
             <ul class="list-unstyled">
-                <li><a href="index-2.html">Home</a></li>
-                <li><a href="about.html">Resume</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="links/about.html">Resume</a></li>
+                <li><a href="links/services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <!-- Dropdown menu
@@ -51,7 +51,7 @@
                 <!-- Logo -->
                 <div class="col-8 col-md-8">
                     <div class="logo-wrap">
-                        <a href="index-2.html">
+                        <a href="index.html">
                             <div class="logo">
                                 <img src="images/logo-slider-black.png" alt="" style="max-height:40px; width:70px">
                             </div>
@@ -83,7 +83,7 @@
                                     <h6 class="wow" data-splitting>Creative Full-Stack Developer</h6>
                                 </div>
                                 <div class="header-cont-text">
-                                    <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided to ...    <br>
+                                    <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies behind them    <br>
                                     My main focus these days is building accessible, inclusive products and digital experiences at <a href="https://abiatechhub.com/">Abia Tech Hub</a> for a variety of clients.</p>
                                 </div>
                                 <div class="btn-wrap text-center">
@@ -128,7 +128,7 @@
                         <div class="item">
                             <a href="services-page.html"> <span class="icon et-browser"></span>
                                 <h5>Data Management and Analysis</h5>
-                                <p>I am familiar with databases technoligies like mySQL and data analysis at an intermediate level and I'm willing to learn on the job </p>
+                                <p>I am familiar with database technologies like mySQL and data analysis at an intermediate level and I'm willing to learn on the job </p>
                                 <div class="numb">03</div>
                             </a>
                         </div>
@@ -425,10 +425,10 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
-                        <li><a href="index-2.html#"><i class="ti-dribbble"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-instagram"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-skype"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-linkedin"></i></a></li>
+                        <li><a href="https://twitter.com/jessecodess"><i class="ti-twitter"></i></a></li>
+                        <li><a href="https://instagram.com/viewsfromjesse"><i class="ti-instagram"></i></a></li>
+                        <li><a href="https://github.com/notjesseand"><i class="ti-github"></i></a></li>
+                        <li><a href="https://linkedin.com/in/jesse-nnorom"><i class="ti-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
