--- a/links/about.html
+++ b/links/about.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from duruthemes.com/demo/html/nils/nils-light/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Oct 2022 08:57:02 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nilsa Brown</title>
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&amp;display=swap">
-    <link rel="stylesheet" href="css/plugins.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/plugins.css" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -28,7 +26,7 @@
     <nav class="nilsbrown-menu" id="nilsbrown-navbar-spy">
         <div class="nilsbrown-menu-inner" id="nilsbrown-navbar">
             <ul class="list-unstyled">
-                <li><a href="index-2.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li class="active"><a href="about.html">Resume</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -44,7 +42,7 @@
                 <!-- Logo -->
                 <div class="col-8 col-md-8">
                     <div class="logo-wrap">
-                        <a href="index-2.html" class="logo"> <img src="images/logo-slider-black.png" alt=""> </a>
+                        <a href="../index.html" class="logo"> <img src="../images/logo-slider-black.png" alt="" style="max-height:40px; width:70px"> </a>
                     </div>
                 </div>
                 <!-- Menu Burger -->
@@ -59,14 +57,18 @@
                 <div class="col-md-6">
                     <h6 class="wow" data-splitting>About Me</h6>
                     <h1 class="wow" data-splitting>I Create Digital Future.</h1>
-                    <p class="mt-45 wow fadeInUp" data-wow-delay=".3s">Nulla posuere tortor sed semper scelerisque. Etiam ornare iros metusan the gravidane sodales vel. Integer ac molestie nisi. Orci varius natoque penatis magnis the duru parturient montes, nascetur ridiculus mus.</p>
-                    <p class="wow fadeInUp" data-wow-delay=".6s">Fusce posuere quis sem quis efficitur. Etiam ac cursus lacus a retium arus crase eratodio congue a nulla quis iaculis laoreet risus.</p>
+                    <p class="mt-45 wow fadeInUp" data-wow-delay=".3s">
+                        Hello! I’m Jesse and I enjoy creating things that live on the internet. I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies behind them <br>
+                        My main focus these days is building accessible, inclusive products and digital experiences at <a href="https://abiatechhub.com/">Abia Tech Hub</a> Hub for a variety of clients.
+
+</p>
+                    <!-- <p class="wow fadeInUp" data-wow-delay=".6s">Fusce posuere quis sem quis efficitur. Etiam ac cursus lacus a retium arus crase eratodio congue a nulla quis iaculis laoreet risus.</p> -->
                     <div class="btn-wrap wow fadeInUp text-left mt-45 mb-45" data-wow-delay=".9s">
-                        <div class="btn-link"> <a href="#">hi@dbrown.com </a> <span class="btn-block color1 animation-bounce"></span> </div>
+                        <div class="btn-link"><a href = mailto:jessennorom@gmail.com>jessennorom@gmail.com</a> <span class="btn-block color1 animation-bounce"></span> </div>
                     </div>
                 </div>
                 <div class="col-md-5 offset-md-1">
-                    <div class="reveal-effect"> <img src="images/slider3.jpg" class="img-fluid" alt=""> </div>
+                    <div class="reveal-effect"> <img src="../images/profile (2).jpg" class="img-fluid" alt=""> </div>
                 </div>
             </div>
         </div>
@@ -87,16 +89,16 @@
                             <div class="block">
                                 <h4>Experience</h4>
                                 <div class="item">
-                                    <h5>HMM Space Inc.<span>2022 - Present</span></h5>
-                                    <p>UI/UX Designer</p>
+                                    <h5>Abia Tech Hub <span>2022 - present</span></h5>
+                                    <p>Intern and Web Developer</p>
                                 </div>
                                 <div class="item">
-                                    <h5>Robinhood Inc. <span>2018 - 2022</span></h5>
-                                    <p>Web Developer</p>
+                                    <h5>ECR Tech<span>2019 - 2021</span></h5>
+                                    <p>junior intern and student</p>
                                 </div>
                                 <div class="item">
-                                    <h5>Bauen Software Inc. <span>2016 - 2018</span></h5>
-                                    <p>Senior Developer</p>
+                                    <h5>Hijas Unicas LTD <span>2017 - 2019</span></h5>
+                                    <p>Sales Intern</p>
                                 </div>
                             </div>
                         </div>
@@ -108,16 +110,16 @@
                             <div class="block">
                                 <h4>Education</h4>
                                 <div class="item">
-                                    <h5>Stanford University <span>2013 - 2015</span></h5>
-                                    <p>of California.</p>
+                                    <h5>University of Nigeria, Nsukka<span>2019 - present</span></h5>
+                                    <p>College</p>
                                 </div>
                                 <div class="item">
-                                    <h5>Specialization Course. <span>2011 - 2013</span></h5>
-                                    <p>MIT University</p>
+                                    <h5>GSS Pyakassa <span>2017 - 2019</span></h5>
+                                    <p>High School</p>
                                 </div>
                                 <div class="item">
-                                    <h5>Level High School. <span>2009 - 2011</span></h5>
-                                    <p>San Fransisco</p>
+                                    <h5>Caray College International <span>2015 - 2017</span></h5>
+                                    <p>Middle School</p>
                                 </div>
                             </div>
                         </div>
@@ -137,40 +139,40 @@
             </div>
             <div class="row">
                 <div class="col-md-5">
-                    <p class="wow fadeInUp" data-wow-delay=".3s">Pellentesque magna magna semper dapibus felis neca aliuen risus. Pellentesque habitant morbi tristique senectus et netus malesuada fames ac turpis egestas.</p>
-                    <p class="wow fadeInUp" data-wow-delay=".6s">Nullam ac dui eget turpis pulvinar porta et et libero. Mauris hendrerit justo ac lorem pellentesque dictum.</p>
+                    <p class="wow fadeInUp" data-wow-delay=".3s">I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel. I am familiar with database technologies like mySQL and data analysis at an intermediate level and I'm willing to learn on the job</p>
+                    <p class="wow fadeInUp" data-wow-delay=".6s">I use HTML, CSS, Bootstrap, Javascript, React, PHP and Laravel and I am willing and eager to learn more technologies</p>
                 </div>
-                <div class="col-md-6 offset-md-1 wow fadeInUp" data-wow-delay=".9s">
-                    <p class="bar-title">Design<span class="percent align-right">90%</span></p>
-                    <div class="bar">
-                        <div class="bar-fill bar-fill-design start"></div>
-                    </div>
-                    <p class="bar-title">Branding <span class="percent align-right">80%</span></p>
-                    <div class="bar">
-                        <div class="bar-fill bar-fill-branding start"></div>
-                    </div>
-                    <p class="bar-title">Web Design<span class="percent align-right">95%</span></p>
-                    <div class="bar">
-                        <div class="bar-fill bar-fill-webdesign start"></div>
-                    </div>
-                    <p class="bar-title">Social Media<span class="percent align-right">85%</span></p>
+               <div class="col-md-6 offset-md-1 wow fadeInUp" data-wow-delay=".8s">
+                    <p class="bar-title">Web Design<span class="percent align-right">85%</span></p>
                     <div class="bar">
                         <div class="bar-fill bar-fill-socialmedia start"></div>
                     </div>
-                </div>
+                    <p class="bar-title">Back-end Development<span class="percent align-right">75%</span></p>
+                    <div class="bar">
+                        <div class="bar-fill bar-fill-webdesign start"></div>
+                    </div>
+                    <p class="bar-title">Branding <span class="percent align-right">70%</span></p>
+                    <div class="bar">
+                        <div class="bar-fill bar-fill-branding start"></div>
+                    </div>
+                    <p class="bar-title">Social Media <span class="percent align-right">70%</span></p>
+                    <div class="bar">
+                        <div class="bar-fill bar-fill-branding start"></div>
+                    </div>
+                    </div>
             </div>
         </div>
     </section>
     <!-- Testiominals -->
     <section id="testimonials" class="testimonials">
-        <div class="background bg-img bg-fixed section-padding pb-0" data-background="images/banner.jpg">
+        <div class="background bg-img bg-fixed section-padding pb-0" data-background="../images/banner.jpg">
             <div class="container">
                 <div class="row">
                     <!-- Work together -->
                     <div class="col-md-6 mb-45">
                         <h4 class="wow" data-splitting>Need help with professional support? Let's work together!</h4>
                         <div class="btn-wrap mt-45 text-left wow fadeInUp" data-wow-delay=".6s">
-                            <div class="btn-link"> <a href="#" class="white">info@dbrown.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
+                            <div class="btn-link"> <a href = mailto:jessennorom@gmail.com class="white">jessennorom@gmail.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
                         </div>
                     </div>
                     <!-- Testiominals -->
@@ -179,18 +181,18 @@
                             <h5>What Are Clients Saying?</h5>
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
-                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="../images/quot.png" alt=""></span>
                                     <div class="info">
-                                        <div class="author-img"> <img src="images/team/1.jpg" alt=""> </div>
+                                        <div class="author-img"> <img src="../images/team/1.jpg" alt=""> </div>
                                         <div class="cont">
                                             <h6>Emily Brown</h6> <span>Project Owner</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item"> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                <div class="item"> <span class="quote"><img src="../images/quot.png" alt=""></span>
                                     <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p>
                                     <div class="info">
-                                        <div class="author-img"> <img src="images/team/2.jpg" alt=""> </div>
+                                        <div class="author-img"> <img src="../images/team/2.jpg" alt=""> </div>
                                         <div class="cont">
                                             <h6>Jason White</h6> <span>Project Owner</span>
                                         </div>
@@ -210,22 +212,22 @@
                 <div class="col-md-7">
                     <div class="owl-carousel owl-theme">
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/1.png" alt=""></a>
+                            <img src="../images/clients/bootstrap.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/2.png" alt=""></a>
+                            <img src="../images/clients/css-3.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/3.png" alt=""></a>
+                            <img src="../images/clients/html-5.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/4.png" alt=""></a>
+                            <img src="../images/clients/js.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/5.png" alt=""></a>
+                            <img src="../images/clients/php.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/6.png" alt=""></a>
+                            <img src="../images/clients/react.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                     </div>
                 </div>
@@ -238,34 +240,32 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Get in touch</h5>
-                    <p>info@dbrown.com</p>
+                    <p><a href = mailto:jessennorom@gmail.com>jessennorom@gmail.com</a> </p>
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>San Francisco — California</p>
+                    <p>Enugu, Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
-                        <li><a href="index-2.html#"><i class="ti-dribbble"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-instagram"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-skype"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-linkedin"></i></a></li>
+                       <li><a href="https://twitter.com/jessecodess"><i class="ti-twitter"></i></a></li>
+                        <li><a href="https://instagram.com/viewsfromjesse"><i class="ti-instagram"></i></a></li>
+                        <li><a href="https://github.com/notjesseand"><i class="ti-github"></i></a></li>
+                        <li><a href="https://linkedin.com/in/jesse-nnorom"><i class="ti-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
     <!-- jQuery -->
-    <script src="js/plugins/jquery-3.6.0.min.js"></script>
-    <script src="js/plugins/bootstrap.min.js"></script>
-    <script src="js/plugins/owl.carousel.min.js"></script>
-    <script src="js/plugins/jquery.magnific-popup.min.js"></script>
-    <script src="js/plugins/YouTubePopUp.js"></script>
-    <script src="js/plugins/jquery.easing.1.3.js"></script>
-    <script src="js/plugins/smooth-scroll.min.js"></script>
-    <script src="js/plugins/wow.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../js/plugins/jquery-3.6.0.min.js"></script>
+    <script src="../js/plugins/bootstrap.min.js"></script>
+    <script src="../js/plugins/owl.carousel.min.js"></script>
+    <script src="../js/plugins/jquery.magnific-popup.min.js"></script>
+    <script src="../js/plugins/YouTubePopUp.js"></script>
+    <script src="../js/plugins/jquery.easing.1.3.js"></script>
+    <script src="../js/plugins/smooth-scroll.min.js"></script>
+    <script src="../js/plugins/wow.js"></script>
+    <script src="../js/custom.js"></script>
 </body>
-
-<!-- Mirrored from duruthemes.com/demo/html/nils/nils-light/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Oct 2022 08:57:02 GMT -->
 </html>
