--- a/links/services.html
+++ b/links/services.html
@@ -8,10 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nilsa Brown</title>
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&amp;display=swap">
-    <link rel="stylesheet" href="css/plugins.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/plugins.css" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <nav class="nilsbrown-menu" id="nilsbrown-navbar-spy">
         <div class="nilsbrown-menu-inner" id="nilsbrown-navbar">
             <ul class="list-unstyled">
-                <li><a href="index-2.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">Resume</a></li>
                 <li class="active"><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -44,7 +44,7 @@
                 <!-- Logo -->
                 <div class="col-8 col-md-8">
                     <div class="logo-wrap">
-                        <a href="index-2.html" class="logo"> <img src="images/logo-dark.png" alt=""> </a>
+                        <a href="../index.html" class="logo"> <img src="../images/logo-dark.png" alt="" style="max-height:40px; width:70px"> </a>
                     </div>
                 </div>
                 <!-- Menu Burger -->
@@ -61,38 +61,39 @@
                     <h1 class="wow" data-splitting>Services</h1>
                 </div>
                 <div class="col-md-7 offset-md-1 mt-45">
-                    <p class="wow fadeInUp" data-wow-delay=".6s">Phasellus et lacus suscipit congue nisl the volutpat magna. donec miss the drana risus tincidunt convallis velit orci congue tortor eu dignissim ipsum suam non odio. Pellenta esuntion miss the imperdiet metus ornare.</p>
+                    <p class="wow fadeInUp" data-wow-delay=".6s">I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Javascript and React(in-view).</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <a href="services-page.html">
-                        <div class="item mb-30"> <span class="icon et-laptop"></span>
-                            <h5>Website Design</h5>
-                            <p>Website ravida surna eveti semen the conse tusio anivite dianne one nivam acestion vue artin dictum.</p>
-                            <div class="numb">01</div>
+                        <div class="item mb-30"> <a href="services-page.html"> <span class="icon et-laptop"></span>
+                                <h5>Website Design</h5>
+                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Javascript and React(in-view)</p>
+                                <div class="numb">01</div>
+                            </a>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="services-page.html">
-                        <div class="item mb-30"> <span class="icon et-bargraph"></span>
-                            <h5>SEO Marketing</h5>
-                            <p>Website ravida surna eveti semen the conse tusio anivite dianne one nivam acestion vue artin dictum.</p>
-                            <div class="numb">02</div>
+                        <div class="item mb-30"> <span class="icon et-desktop"></span>
+                                <h5>Back-end Development</h5>
+                                <p>I'm currently taking a PHP and SQL database Management course to advance my knowledge in backend technologies</p><br>
+                                <div class="numb">02</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="services-page.html">
-                        <div class="item mb-30"> <span class="icon et-basket"></span>
-                            <h5>eCommerce</h5>
-                            <p>Website ravida surna eveti semen the conse tusio anivite dianne one nivam acestion vue artin dictum.</p>
+                        <div class="item mb-30"> <span class="icon et-browser"></span>
+                            <h5>Data Management and Analysis</h5>
+                            <p>I am familiar with database technologies like mySQL and data analysis at an intermediate level and I'm willing to learn on the job </p><br>
                             <div class="numb">03</div>
                         </div>
                     </a>
                 </div>
-                <div class="col-md-4">
+            <!--  <div class="col-md-4">
                     <a href="services-page.html">
                         <div class="item mb-30"> <span class="icon et-browser"></span>
                             <h5>Graphic Design</h5>
@@ -101,7 +102,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-4">
+                 <div class="col-md-4">
                     <a href="services-page.html">
                         <div class="item mb-30"> <span class="icon et-target"></span>
                             <h5>Digital Marketing</h5>
@@ -118,20 +119,20 @@
                             <div class="numb">06</div>
                         </div>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
     <!-- Testiominals -->
     <section class="testimonials">
-        <div class="background bg-img bg-fixed section-padding pb-0" data-background="images/banner.jpg">
+        <div class="background bg-img bg-fixed section-padding pb-0" data-background="../images/banner.jpg">
             <div class="container">
                 <div class="row">
                     <!-- Work together -->
                     <div class="col-md-6 mb-30">
                         <h4 class="wow" data-splitting>Need help with professional support? Let's work together!</h4>
                         <div class="btn-wrap mt-30 text-left wow fadeInUp" data-wow-delay=".6s">
-                            <div class="btn-link"> <a href="#" class="white">info@dbrown.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
+                            <div class="btn-link"> <a href = mailto:jessennorom@gmail.com class="white">jessennorom@gmail.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
                         </div>
                     </div>
                     <!-- Testiominals -->
@@ -140,18 +141,18 @@
                             <h5>What Are Clients Saying?</h5>
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
-                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="../images/quot.png" alt=""></span>
                                     <div class="info">
-                                        <div class="author-img"> <img src="images/team/1.jpg" alt=""> </div>
+                                        <div class="author-img"> <img src="../images/team/1.jpg" alt=""> </div>
                                         <div class="cont">
                                             <h6>Emily Brown</h6> <span>Project Owner</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item"> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                <div class="item"> <span class="quote"><img src="../images/quot.png" alt=""></span>
                                     <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p>
                                     <div class="info">
-                                        <div class="author-img"> <img src="images/team/2.jpg" alt=""> </div>
+                                        <div class="author-img"> <img src="../images/team/2.jpg" alt=""> </div>
                                         <div class="cont">
                                             <h6>Jason White</h6> <span>Project Owner</span>
                                         </div>
@@ -171,22 +172,22 @@
                 <div class="col-md-7">
                     <div class="owl-carousel owl-theme">
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/1.png" alt=""></a>
+                            <img src="../images/clients/bootstrap.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/2.png" alt=""></a>
+                            <img src="../images/clients/css-3.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/3.png" alt=""></a>
+                            <img src="../images/clients/html-5.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/4.png" alt=""></a>
+                            <img src="../images/clients/js.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/5.png" alt=""></a>
+                            <img src="../images/clients/php.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/6.png" alt=""></a>
+                            <img src="../images/clients/react.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                     </div>
                 </div>
@@ -199,33 +200,33 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Get in touch</h5>
-                    <p>info@dbrown.com</p>
+                    <p><a href = mailto:jessennorom@gmail.com>jessennorom@gmail.com</a></p>
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>San Francisco — California</p>
+                    <p>Enugu, Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
-                        <li><a href="index-2.html#"><i class="ti-dribbble"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-instagram"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-skype"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-linkedin"></i></a></li>
+                       <li><a href="https://twitter.com/jessecodess"><i class="ti-twitter"></i></a></li>
+                        <li><a href="https://instagram.com/viewsfromjesse"><i class="ti-instagram"></i></a></li>
+                        <li><a href="https://github.com/notjesseand"><i class="ti-github"></i></a></li>
+                        <li><a href="https://linkedin.com/in/jesse-nnorom"><i class="ti-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
     <!-- jQuery -->
-    <script src="js/plugins/jquery-3.6.0.min.js"></script>
-    <script src="js/plugins/bootstrap.min.js"></script>
-    <script src="js/plugins/owl.carousel.min.js"></script>
-    <script src="js/plugins/jquery.magnific-popup.min.js"></script>
-    <script src="js/plugins/YouTubePopUp.js"></script>
-    <script src="js/plugins/jquery.easing.1.3.js"></script>
-    <script src="js/plugins/smooth-scroll.min.js"></script>
-    <script src="js/plugins/wow.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../js/plugins/jquery-3.6.0.min.js"></script>
+    <script src="../js/plugins/bootstrap.min.js"></script>
+    <script src="../js/plugins/owl.carousel.min.js"></script>
+    <script src="../js/plugins/jquery.magnific-popup.min.js"></script>
+    <script src="../js/plugins/YouTubePopUp.js"></script>
+    <script src="../js/plugins/jquery.easing.1.3.js"></script>
+    <script src="../js/plugins/smooth-scroll.min.js"></script>
+    <script src="../js/plugins/wow.js"></script>
+    <script src="../js/custom.js"></script>
 </body>
 
 <!-- Mirrored from duruthemes.com/demo/html/nils/nils-light/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Oct 2022 08:57:02 GMT -->
