--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="links/about.html">Resume</a></li>
                 <li><a href="links/services.html">Services</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="links/portfolio.html">Portfolio</a></li>
+                <li><a href="links/blog.html">Blog</a></li>
                 <!-- Dropdown menu
                 <li class="dropdown"> <span>Dropdown <i class="ti-angle-down"></i></span>
                     <ul class="dropdown-menu">
@@ -83,7 +83,7 @@
                                     <h6 class="wow" data-splitting>Creative Full-Stack Developer</h6>
                                 </div>
                                 <div class="header-cont-text">
-                                    <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies behind them    <br>
+                                    <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior developer proficient in backend technoligies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies behind them    <br>
                                     My main focus these days is building accessible, inclusive products and digital experiences at <a href="https://abiatechhub.com/">Abia Tech Hub</a> for a variety of clients.</p>
                                 </div>
                                 <div class="btn-wrap text-center">
