--- a/links/about.html
+++ b/links/about.html
@@ -58,7 +58,7 @@
                     <h6 class="wow" data-splitting>About Me</h6>
                     <h1 class="wow" data-splitting>I Create Digital Future.</h1>
                     <p class="mt-45 wow fadeInUp" data-wow-delay=".3s">
-                        Hello! I’m Jesse and I enjoy creating things that live on the internet. I am a creative junior web & app developer proficient in backend technoligies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies behind them <br>
+                        Hello! I’m Jesse and I enjoy creating things that live on the internet. I am a creative developer proficient in backend technoligies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies behind them <br>
                         My main focus these days is building accessible, inclusive products and digital experiences at <a href="https://abiatechhub.com/">Abia Tech Hub</a> Hub for a variety of clients.
 
 </p>
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="item">
                                     <h5>ECR Tech<span>2019 - 2021</span></h5>
-                                    <p>junior intern and student</p>
+                                    <p>Intern and student</p>
                                 </div>
                                 <div class="item">
                                     <h5>Hijas Unicas LTD <span>2017 - 2019</span></h5>
