--- a/index.html
+++ b/index.html
@@ -297,20 +297,21 @@
             <div class="row mb-30">
 				<div class="col-md-6">
 					<div class="img left">
-						<a href="post.html"><img src="images/blog/1.jpg" alt=""></a>
+						<a href="links/post.html"><img src="images/blog/oop.jpg" alt=""></a>
 					</div>
 				</div>
 				<div class="col-md-6 valign">
 					<div class="content">
 						<div class="date">
-							<h1>24</h1>
-							<h6>June 2022</h6>
+							<h1>01</h1>
+							<h6>October 2022</h6>
 						</div>
 						<div class="cont">
-							<h5>Get Started With Tiktok Ads.</h5>
-							<p>Phasellus et lacus suscipit congue nis in the miss mine one miss the drana risus in tincidunt ornare.</p>
+							<h5>Object Oriented Design</h5>
+							<p> Object-oriented design started right from the moment computers were invented.
+                             At the beginning of the computing era, programming was usually limited to ...</p>
 							<div class="btn-wrap">
-                                    <div class="btn-link"> <a href="post.html">Read more <i class="ti-arrow-right"></i></a> <span class="btn-block color1 animation-bounce"></span> </div>
+                                    <div class="btn-link"> <a href="links/post.html">Read more <i class="ti-arrow-right"></i></a> <span class="btn-block color1 animation-bounce"></span> </div>
                                 </div>
 						</div>
 					</div>
