--- a/services-page.html
+++ b/services-page.html
@@ -44,7 +44,7 @@
                 <!-- Logo -->
                 <div class="col-8 col-md-8">
                     <div class="logo-wrap">
-                        <a href="index-2.html" class="logo"> <img src="images/logo-dark.png" alt=""> </a>
+                        <a href="index-2.html" class="logo"> <img src="../images" alt=""> </a>
                     </div>
                 </div>
                 <!-- Menu Burger -->
