--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </ul>
                 </li>
                 -->
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="links/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
