--- a/links/blog.html
+++ b/links/blog.html
@@ -80,7 +80,7 @@
                                     </div>
                                     <h4><a href="post.html">Object Oriented Design</a></h4>
                                     <p>Object-oriented design started right from the moment computers were invented.
-                                    At the beginning of the computing era, programming was usually limited to machine language programming. Machine language means those sets of instructions that are specific to a particular machine or processor, which are in the form of 0’s and 1’s. These are sequences of bits (0100110…). But it’s quite difficult to write a program or develop software in machine language...
+                                    At the beginning of the computing era, programming was usually limited to machine language programming. Machine language means those sets of instructions that are specific to a particular machine or ...
                                     </p>
                                 </div>
                             </div>
@@ -131,8 +131,9 @@
                             <!-- Pagination -->
                             <ul class="pagination-wrap align-center mb-30 mt-30">
                                 <li><a href="blog2.html#"><i class="ti-angle-left"></i></a></li>
-                                <li><a href="blog2.html#">1</a></li>
-                                <li><a href="blog2.html#" class="active">2</a></li>
+                                
+                                <li><a href="blog2.html#" class="active">1</a></li>
+                                <li><a href="blog2.html#">2</a></li>
                                 <li><a href="blog2.html#">3</a></li>
                                 <li><a href="blog2.html#"><i class="ti-angle-right"></i></a></li>
                             </ul>
@@ -157,7 +158,7 @@
                                 </div>
                                 <ul class="recent">
                                     <li>
-                                        <div class="thum"> <img src="../images/blog/1.jpg" alt=""> </div> <a href="post.html">Get Started With Tiktok Ads.</a>
+                                        <div class="thum"> <img src="../images/blog/oop.jpg" alt=""> </div> <a href="post.html">Object Oriented Programming</a>
                                     </li>
                                     <li>
                                         <div class="thum"> <img src="../images/blog/4.jpg" alt=""> </div> <a href="post.html">The Metaverse – how’s it going?</a>
