--- a/links/contact.html
+++ b/links/contact.html
@@ -8,10 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nilsa Brown</title>
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&amp;display=swap">
-    <link rel="stylesheet" href="css/plugins.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/plugins.css" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -28,8 +28,8 @@
     <nav class="nilsbrown-menu" id="nilsbrown-navbar-spy">
         <div class="nilsbrown-menu-inner" id="nilsbrown-navbar">
             <ul class="list-unstyled">
-                <li><a href="index-2.html">Home</a></li>
-                <li class="active"><a href="links/about.html">Resume</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li class="active"><a href="about.html">Resume</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="blog.html">Blog</a></li>
@@ -44,7 +44,7 @@
                 <!-- Logo -->
                 <div class="col-8 col-md-8">
                     <div class="logo-wrap">
-                        <a href="index-2.html" class="logo"> <img src="images/logo-slider-black.png" alt=""> </a>
+                        <a href="../index.html" class="logo"> <img src="../images/logo-slider-black.png" alt="" style="max-height:40px; width:70px"> </a>
                     </div>
                 </div>
                 <!-- Menu Burger -->
@@ -67,7 +67,7 @@
                         <div class="wrap-block"> <span class="icon et-phone"></span>
                             <div class="text-block">
                                 <h5>Phone</h5>
-                                <p>+1 800 845 00 00</p>
+                                <p>+234 704 909 9250</p>
                             </div>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                         <div class="wrap-block"> <span class="icon et-map-pin"></span>
                             <div class="text-block">
                                 <h5>Address</h5>
-                                <p>750 St, Office 1138, San Francisco, CA 94108</p>
+                                <p>Enugu, Nigeria</p>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                         <div class="wrap-block"> <span class="icon et-notebook"></span>
                             <div class="text-block">
                                 <h5>E-Mail</h5>
-                                <p>hello@dbrown.com</p>
+                                <p><a href = mailto:jessennorom@gmail.com>jessennorom@gmail.com</a></p>
                             </div>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                                 <input name="subject" type="text" placeholder="Subject *" required>
                             </div>
                             <div class="col-md-12 form-group">
-                                <textarea name="message" id="message" cols="30" rows="4" placeholder="How can we help you? Feel free to get in touch! *" required></textarea>
+                                <textarea name="message" id="message" cols="30" rows="4" placeholder="How can I help you? Feel free to get in touch! *" required></textarea>
                             </div>
                             <div class="col-md-12">
                                 <div class="btn-wrap">
@@ -128,23 +128,23 @@
         </div>
     </section>
     <!-- Maps -->
-    <section id="map">
+    <!-- <section id="map">
         <div class="full-width">
             <div class="google-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1573147.7480448114!2d-74.84628175962355!3d41.04009641088412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25856139b3d33%3A0xb2739f33610a08ee!2s1616%20Broadway%2C%20New%20York%2C%20NY%2010019%2C%20Amerika%20Birle%C5%9Fik%20Devletleri!5e0!3m2!1str!2str!4v1646760525018!5m2!1str!2str" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Testiominals -->
     <section class="testimonials">
-        <div class="background bg-img bg-fixed section-padding pb-0" data-background="images/banner.jpg">
+        <div class="background bg-img bg-fixed section-padding pb-0" data-background="../images/banner.jpg">
             <div class="container">
                 <div class="row">
                     <!-- Work together -->
                     <div class="col-md-6 mb-30">
                         <h4 class="wow" data-splitting>Need help with professional support? Let's work together!</h4>
                         <div class="btn-wrap mt-30 text-left wow fadeInUp" data-wow-delay=".6s">
-                            <div class="btn-link"> <a href="#" class="white">info@dbrown.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
+                            <div class="btn-link"> <a href = mailto:jessennorom@gmail.com class="white">jessennorom@gmail.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
                         </div>
                     </div>
                     <!-- Testiominals -->
@@ -153,18 +153,18 @@
                             <h5>What Are Clients Saying?</h5>
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
-                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="../images/quot.png" alt=""></span>
                                     <div class="info">
-                                        <div class="author-img"> <img src="images/team/1.jpg" alt=""> </div>
+                                        <div class="author-img"> <img src="../images/team/1.jpg" alt=""> </div>
                                         <div class="cont">
                                             <h6>Emily Brown</h6> <span>Project Owner</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item"> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                <div class="item"> <span class="quote"><img src="../images/quot.png" alt=""></span>
                                     <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p>
                                     <div class="info">
-                                        <div class="author-img"> <img src="images/team/2.jpg" alt=""> </div>
+                                        <div class="author-img"> <img src="../images/team/2.jpg" alt=""> </div>
                                         <div class="cont">
                                             <h6>Jason White</h6> <span>Project Owner</span>
                                         </div>
@@ -183,7 +183,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="owl-carousel owl-theme">
-                        <div class="clients-logo">
+                        <!-- <div class="clients-logo">
                             <a href="#0"><img src="images/clients/1.png" alt=""></a>
                         </div>
                         <div class="clients-logo">
@@ -200,7 +200,7 @@
                         </div>
                         <div class="clients-logo">
                             <a href="#0"><img src="images/clients/6.png" alt=""></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -212,33 +212,33 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Get in touch</h5>
-                    <p>info@dbrown.com</p>
+                    <p><a href = mailto:jessennorom@gmail.com>jessennorom@gmail.com</a></p>
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>San Francisco — California</p>
+                    <p>Enugu, Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
-                        <li><a href="index-2.html#"><i class="ti-dribbble"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-instagram"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-skype"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-linkedin"></i></a></li>
+                         <li><a href="https://twitter.com/jessecodess"><i class="ti-twitter"></i></a></li>
+                        <li><a href="https://instagram.com/viewsfromjesse"><i class="ti-instagram"></i></a></li>
+                        <li><a href="https://github.com/notjesseand"><i class="ti-github"></i></a></li>
+                        <li><a href="https://linkedin.com/in/jesse-nnorom"><i class="ti-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
     <!-- jQuery -->
-    <script src="js/plugins/jquery-3.6.0.min.js"></script>
-    <script src="js/plugins/bootstrap.min.js"></script>
-    <script src="js/plugins/owl.carousel.min.js"></script>
-    <script src="js/plugins/jquery.magnific-popup.min.js"></script>
-    <script src="js/plugins/YouTubePopUp.js"></script>
-    <script src="js/plugins/jquery.easing.1.3.js"></script>
-    <script src="js/plugins/smooth-scroll.min.js"></script>
-    <script src="js/plugins/wow.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../js/plugins/jquery-3.6.0.min.js"></script>
+    <script src="../js/plugins/bootstrap.min.js"></script>
+    <script src="../js/plugins/owl.carousel.min.js"></script>
+    <script src="../js/plugins/jquery.magnific-popup.min.js"></script>
+    <script src="../js/plugins/YouTubePopUp.js"></script>
+    <script src="../js/plugins/jquery.easing.1.3.js"></script>
+    <script src="../js/plugins/smooth-scroll.min.js"></script>
+    <script src="../js/plugins/wow.js"></script>
+    <script src="../js/custom.js"></script>
 </body>
 
 <!-- Mirrored from duruthemes.com/demo/html/nils/nils-light/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Oct 2022 08:57:04 GMT -->
