--- a/links/portfolio-page.html
+++ b/links/portfolio-page.html
@@ -8,10 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nilsa Brown</title>
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&amp;display=swap">
-    <link rel="stylesheet" href="css/plugins.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/plugins.css" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -28,8 +28,8 @@
     <nav class="nilsbrown-menu" id="nilsbrown-navbar-spy">
         <div class="nilsbrown-menu-inner" id="nilsbrown-navbar">
             <ul class="list-unstyled">
-                <li><a href="index-2.html">Home</a></li>
-                <li><a href="links/about.html">Resume</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="about.html">Resume</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li class="active"><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="blog.html">Blog</a></li>
@@ -44,7 +44,7 @@
                 <!-- Logo -->
                 <div class="col-8 col-md-8">
                     <div class="logo-wrap">
-                        <a href="index-2.html" class="logo"> <img src="images/logo-dark.png" alt=""> </a>
+                        <a href="../index.html" class="logo"> <img src="../images/logo-slider-black.png" alt="" style="max-height:40px; width:70px"> </a>
                     </div>
                 </div>
                 <!-- Menu Burger -->
@@ -63,27 +63,27 @@
                             <div class="owl-carousel owl-theme text-center">
                                 <div class="item">
                                     <div class="gallery-item-inner">
-                                        <a href="images/portfolio/1.jpg" title="" class="img-zoom">
+                                        <a href="../images/profile (2).jpg" title="" class="img-zoom">
                                             <div class="gallery-box">
-                                                <div class="gallery-img"> <img src="images/portfolio/1.jpg" class="img-fluid mx-auto d-block" alt=""> </div>
+                                                <div class="gallery-img"> <img src="../images/profile (2).jpg" class="img-fluid mx-auto d-block" alt=""> </div>
                                             </div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="gallery-item-inner">
-                                        <a href="images/portfolio/2.jpg" title="" class="img-zoom">
+                                        <a href="../images/portfolio/2.jpg" title="" class="img-zoom">
                                             <div class="gallery-box">
-                                                <div class="gallery-img"> <img src="images/portfolio/2.jpg" class="img-fluid mx-auto d-block" alt=""> </div>
+                                                <div class="gallery-img"> <img src="../images/portfolio/2.jpg" class="img-fluid mx-auto d-block" alt=""> </div>
                                             </div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="gallery-item-inner">
-                                        <a href="images/portfolio/3.jpg" title="" class="img-zoom">
+                                        <a href="../images/portfolio/3.jpg" title="" class="img-zoom">
                                             <div class="gallery-box">
-                                                <div class="gallery-img"> <img src="images/portfolio/3.jpg" class="img-fluid mx-auto d-block" alt=""> </div>
+                                                <div class="gallery-img"> <img src="../images/portfolio/3.jpg" class="img-fluid mx-auto d-block" alt=""> </div>
                                             </div>
                                         </a>
                                     </div>
@@ -113,7 +113,7 @@
             <div class="row">
                 <div class="col-md-5 rest">
                     <div class="prv">
-                        <div class="img bg-img" data-background="images/portfolio/9.jpg">
+                        <div class="img bg-img" data-background="../images/portfolio/9.jpg">
                             <div class="text-left ontop">
                                 <h5>Yard House</h5> <span class="sub-title mb-0 mt-10"><a href="portfolio-page.html">Prev Project</a></span>
                             </div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-md-5 rest">
                     <div class="nxt">
-                        <div class="img bg-img" data-background="images/portfolio/4.jpg">
+                        <div class="img bg-img" data-background="../images/portfolio/4.jpg">
                             <div class="text-right ontop">
                                 <h5>Peaky Blinders</h5> <span class="sub-title mb-0 mt-10"><a href="portfolio-page.html">Next Project</a></span>
                             </div>
@@ -139,14 +139,14 @@
     </section>
     <!-- Testiominals -->
     <section class="testimonials">
-        <div class="background bg-img bg-fixed section-padding pb-0" data-background="images/banner.jpg">
+        <div class="background bg-img bg-fixed section-padding pb-0" data-background="../images/banner.jpg">
             <div class="container">
                 <div class="row">
                     <!-- Work together -->
                     <div class="col-md-6 mb-30">
                         <h4 class="wow" data-splitting>Need help with professional support? Let's work together!</h4>
                         <div class="btn-wrap mt-30 text-left wow fadeInUp" data-wow-delay=".6s">
-                            <div class="btn-link"> <a href="#" class="white">info@dbrown.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
+                            <div class="btn-link"> <a href = mailto:jessennorom@gmail.com class="white">jessennorom@gmail.com</a> <span class="btn-block color3 animation-bounce"></span> </div>
                         </div>
                     </div>
                     <!-- Testiominals -->
@@ -155,18 +155,18 @@
                             <h5>What Are Clients Saying?</h5>
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
-                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="../images/quot.png" alt=""></span>
                                     <div class="info">
-                                        <div class="author-img"> <img src="images/team/1.jpg" alt=""> </div>
+                                        <div class="author-img"> <img src="../images/team/1.jpg" alt=""> </div>
                                         <div class="cont">
                                             <h6>Emily Brown</h6> <span>Project Owner</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item"> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                <div class="item"> <span class="quote"><img src="../images/quot.png" alt=""></span>
                                     <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p>
                                     <div class="info">
-                                        <div class="author-img"> <img src="images/team/2.jpg" alt=""> </div>
+                                        <div class="author-img"> <img src="../images/team/2.jpg" alt=""> </div>
                                         <div class="cont">
                                             <h6>Jason White</h6> <span>Project Owner</span>
                                         </div>
@@ -186,22 +186,22 @@
                 <div class="col-md-7">
                     <div class="owl-carousel owl-theme">
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/1.png" alt=""></a>
+                            <img src="../images/clients/html-5.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/2.png" alt=""></a>
+                            <img src="../images/clients/css-3.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/3.png" alt=""></a>
+                            <img src="../images/clients/bootstrap.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/4.png" alt=""></a>
+                            <img src="../images/clients/js.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/5.png" alt=""></a>
+                            <img src="../images/clients/react.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <a href="#0"><img src="images/clients/6.png" alt=""></a>
+                            <img src="../images/clients/php.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                     </div>
                 </div>
@@ -214,33 +214,33 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Get in touch</h5>
-                    <p>info@dbrown.com</p>
+                    <p><a href = mailto:jessennorom@gmail.com>jessennorom@gmail.com</a></p>
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>San Francisco — California</p>
+                    <p>Enugu, Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
-                        <li><a href="index-2.html#"><i class="ti-dribbble"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-instagram"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-skype"></i></a></li>
-                        <li><a href="index-2.html#"><i class="ti-linkedin"></i></a></li>
+                        <li><a href="https://twitter.com/jessecodess"><i class="ti-twitter"></i></a></li>
+                        <li><a href="https://instagram.com/viewsfromjesse"><i class="ti-instagram"></i></a></li>
+                        <li><a href="https://github.com/notjesseand"><i class="ti-github"></i></a></li>
+                        <li><a href="https://linkedin.com/in/jesse-nnorom"><i class="ti-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
     <!-- jQuery -->
-    <script src="js/plugins/jquery-3.6.0.min.js"></script>
-    <script src="js/plugins/bootstrap.min.js"></script>
-    <script src="js/plugins/owl.carousel.min.js"></script>
-    <script src="js/plugins/jquery.magnific-popup.min.js"></script>
-    <script src="js/plugins/YouTubePopUp.js"></script>
-    <script src="js/plugins/jquery.easing.1.3.js"></script>
-    <script src="js/plugins/smooth-scroll.min.js"></script>
-    <script src="js/plugins/wow.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../js/plugins/jquery-3.6.0.min.js"></script>
+    <script src="../js/plugins/bootstrap.min.js"></script>
+    <script src="../js/plugins/owl.carousel.min.js"></script>
+    <script src="../js/plugins/jquery.magnific-popup.min.js"></script>
+    <script src="../js/plugins/YouTubePopUp.js"></script>
+    <script src="../js/plugins/jquery.easing.1.3.js"></script>
+    <script src="../js/plugins/smooth-scroll.min.js"></script>
+    <script src="../js/plugins/wow.js"></script>
+    <script src="../js/custom.js"></script>
 </body>
 
 <!-- Mirrored from duruthemes.com/demo/html/nils/nils-light/portfolio-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Oct 2022 08:57:04 GMT -->
